# DeepRead

./: .env.example  .gitignore  README.md  config.py  gitee_client.py  llm_client.py  main.py  md_summarizer.py  mineru_client.py  pyproject.toml  summarizer.py
pipeline/: README.md  __init__.py  base.py  factory.py  manager.py  steps.py
prompts/: detailed.md
